WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38549
[WebKit2] The web process doesn't need to paint when the web view is hidden.
https://bugs.webkit.org/show_bug.cgi?id=38549
Summary
[WebKit2] The web process doesn't need to paint when the web view is hidden.
Anders Carlsson
Reported
2010-05-04 14:19:53 PDT
[WebKit2] The web process doesn't need to paint when the web view is hidden.
Attachments
Patch
(6.40 KB, patch)
2010-05-04 14:26 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-05-04 14:26:47 PDT
Created
attachment 55050
[details]
Patch
mitz
Comment 2
2010-05-04 14:46:23 PDT
Comment on
attachment 55050
[details]
Patch
> +void DrawingAreaUpdateChunk::suspendPainting() > +{ > + ASSERT(m_shouldPaint);
Do you really want to assert this?
> +void DrawingAreaUpdateChunk::resumePainting() > +{ > + ASSERT(!m_shouldPaint);
Do you really want to assert this? r=me if you change “paint” to “update” and “painting” to “updating”.
Anders Carlsson
Comment 3
2010-05-04 14:56:57 PDT
(In reply to
comment #2
)
> (From update of
attachment 55050
[details]
) > > +void DrawingAreaUpdateChunk::suspendPainting() > > +{ > > + ASSERT(m_shouldPaint); > > Do you really want to assert this? >
I figured it wouldn't hurt! If it's a problem we can always remove it later.
> > +void DrawingAreaUpdateChunk::resumePainting() > > +{ > > + ASSERT(!m_shouldPaint); > > Do you really want to assert this? >
I figured it wouldn't hurt! If it's a problem we can always remove it later.
> r=me if you change “paint” to “update” and “painting” to “updating”.
Will do, thanks!
Anders Carlsson
Comment 4
2010-05-04 15:24:25 PDT
Committed
r58781
: <
http://trac.webkit.org/changeset/58781
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug