WebKit2/WebProcess/WebPage/DrawingAreaUpdateChunk.cpp
@@ -40,6 +40,7 @@ namespace WebKit {
 DrawingAreaUpdateChunk::DrawingAreaUpdateChunk(WebPage* webPage)
     : DrawingArea(DrawingAreaUpdateChunkType, webPage)
     , m_isWaitingForUpdate(false)
+    , m_shouldPaint(true)
     , m_displayTimer(WebProcess::shared().runLoop(), this, &DrawingAreaUpdateChunk::display)
 {
 }
@@ -79,6 +80,9 @@ void DrawingAreaUpdateChunk::setNeedsDisplay(const IntRect& rect)
 void DrawingAreaUpdateChunk::display()
 {
     ASSERT(!m_isWaitingForUpdate);
+ 
+    if (!m_shouldPaint)
+        return;
 
     if (m_dirtyRect.isEmpty())
         return;
@@ -101,6 +105,9 @@ void DrawingAreaUpdateChunk::display()
 
 void DrawingAreaUpdateChunk::scheduleDisplay()
 {
+    if (!m_shouldPaint)
+        return;
+
     if (m_isWaitingForUpdate)
         return;
     
@@ -112,6 +119,7 @@ void DrawingAreaUpdateChunk::scheduleDisplay()
 
 void DrawingAreaUpdateChunk::setSize(const IntSize& viewSize)
 {
+    ASSERT(m_shouldPaint);
     ASSERT_ARG(viewSize, !viewSize.isEmpty());
 
     // We don't want to wait for an update until we display.
@@ -129,6 +137,24 @@ void DrawingAreaUpdateChunk::setSize(const IntSize& viewSize)
     m_displayTimer.stop();
 
     WebProcess::shared().connection()->send(DrawingAreaProxyMessage::DidSetSize, m_webPage->pageID(), CoreIPC::In(updateChunk));
+}
+
+void DrawingAreaUpdateChunk::suspendPainting()
+{
+    ASSERT(m_shouldPaint);
+    
+    m_shouldPaint = false;
+    m_displayTimer.stop();
+}
+
+void DrawingAreaUpdateChunk::resumePainting()
+{
+    ASSERT(!m_shouldPaint);
+    
+    m_shouldPaint = true;
+    
+    // Display if needed.
+    display();
 }
 
 void DrawingAreaUpdateChunk::didUpdate()
@@ -151,6 +177,14 @@ void DrawingAreaUpdateChunk::didReceiveMessage(CoreIPC::Connection*, CoreIPC::Me
             break;
         }
         
+        case DrawingAreaMessage::SuspendPainting:
+            suspendPainting();
+            break;
+
+        case DrawingAreaMessage::ResumePainting:
+            resumePainting();
+            break;
+
         case DrawingAreaMessage::DidUpdate:
             didUpdate();
             break;
