WebKit2/WebProcess/WebPage/DrawingAreaUpdateChunk.h
@@ -50,8 +50,11 @@ public:
 
 private:
     void scheduleDisplay();
+    
+    // CoreIPC message handlers.
     void setSize(const WebCore::IntSize& viewSize);
-
+    void suspendPainting();
+    void resumePainting();
     void didUpdate();
 
     // Platform overrides
@@ -59,6 +62,7 @@ private:
 
     WebCore::IntRect m_dirtyRect;
     bool m_isWaitingForUpdate;
+    bool m_shouldPaint;
     RunLoop::Timer<DrawingAreaUpdateChunk> m_displayTimer;
 };
 
